0.9.0
    - DirectedWrite. RTPSReader checks if incoming data contains 
      DirectedWrite inline qos, and if so, accepts Data only if
      There is a matching Guid.
      
0.8.8
    - FIX: DataReader.clear() had a bug, samples were not removed.

0.8.7 
    - FIX: Keys for builtin topics are not subject to MD5 digest.
     
0.8.6
    - Added getReaders() and getWriters() to Participant. This allows 
      access to existing entities.
    
0.8.5
    - Added getGuid() method to udds Participant & Entity
     
0.8.4
    - Changed EntityFactory to be a class instead of interface.
    
0.8.3
    - Added EntityFactory. EntityFactory provides means for the application
      to provide custom implementations of entities used by udds.
      
0.8.2
    - Added direct support for java primitive types to RTPSByteBuffer
    
0.8.1
    - Minor fixes, Configuration can be given to participant. Renamed
      DataListener: add/removeListener to add/removeSampleListener.
    - One can configure any number of listener uris. Each successful
      listener uri will be transported to remote entity.
    
0.8.0
    - FIX: QosDestinationOrder is better handled during reception.
      There still remains some incompatibility as timestamp is not compared
      at instance level, but at sample level. 
    - Config: rtps.traffic.port-config: Allows configuration of PD, DG, PG etc.
    - Config: jrtps.listener-uris & jrtps.discovery.listener-uris: Allows 
      configuration of network listener receivers
    - Participant ID used can be omitted. In that case, if port numbers are 
      not explicitly given, port number will be assigned by trying different
      participant ids until a port can be opened for reception.
    - TransportProvider is used to plug different transports to jRTPS. 
      Currently, UDP is the only one available.   
    
0.7.1
    - Documentation update

0.7.0
    - DataWriter.assertLiveliness() to support Liveliness kind MANUAL_BY_TOPIC.